--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.plataform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/contabancaria
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=password
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
